--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,6 +2,7 @@
   <div class="row">
     <div class="col-xs-12">
       <h3>Hello</h3>
+      <app-servers></app-servers>
     </div>
   </div>
 </div>
