--- a/src/app/servers/servers.component.html
+++ b/src/app/servers/servers.component.html
@@ -9,6 +9,19 @@
 >
   Add
 </button>
-<p>{{ serverCreationStatus }}</p>
+<!-- <p>{{ serverCreationStatus }}</p> -->
+@if(serverCreated){
+<p>Server was created. Server name is {{ serverName }}</p>
+
+} @else {
+<p>No server created.</p>
+
+}
+<!-- <p *ngIf="serverCreated; else noServer">
+  Server was created. Server name is {{ serverName }}
+</p>
+<ng-template #noServer>
+  <p>No server created.</p>
+</ng-template> -->
 <app-server></app-server>
 <app-server></app-server>
