--- a/src/app/server/server.component.html
+++ b/src/app/server/server.component.html
@@ -2,6 +2,7 @@
   [ngStyle]="{
     backgroundColor: getColor()
   }"
+  [ngClass]="{ online: serverStatus === 'online' }"
 >
   Server with id {{ serverId }} is {{ getServerStatus() }}
 </p>
